[metadata]
name = montagne
summary = OpenStack LBaaS Enhance Service
author = Kerong Zhu
author-email = warcyzkr@outlook.com
description-file = README.md
platform = linux
classifier =
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Operating System :: Linux
keywords =
    openstack

[files]
packages =
    montagne
data_files =
    etc/montagne =
        etc/montagne.ini
[wheel]
universal = 1

[entry_points]
console_scripts =
    montagne-manager = montagne.cmd.manager:main
